--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,15 @@
 .res-card{
     padding: 5px;
     margin: 10px;
-    background-color: antiquewhite;
     border-radius: 5px;
     width: 200px;
-    height: 350px;
+    
 }
 .res-card:hover{
     cursor: pointer;
     border: 1px solid black;
+    background-color: antiquewhite;
+    animation-timing-function: ease;
 }
 
 .res-container{
@@ -46,4 +47,10 @@
 
 .res-logo{
     width: 100%;
+    height: 40%;
+}
+
+.top-rated-btn{
+    margin: 10px;
+    cursor: pointer;
 }
