--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,13 @@
     background-color: aliceblue;
     border: 1px solid black;
 }
+.border{
+    border: 1px solid black;
+}
 
+.border-rd{
+    border-radius: 5px;
+}
 .logo{
     width: 100px;
     cursor: pointer;
@@ -31,8 +37,8 @@
     margin: 10px;
     border-radius: 5px;
     width: 200px;
-    
 }
+
 .res-card:hover{
     cursor: pointer;
     border: 1px solid black;
@@ -52,5 +58,29 @@
 
 .top-rated-btn{
     margin: 10px;
+    cursor: pointer;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card{
+    padding: 5px;
+    margin: 10px;
+    border-radius: 5px;
+    width: 200px;
+    height: 400px;
+    background-color: antiquewhite;
+}
+
+.shimmer-img{
+    width: 100%;
+    height: 40%;
+    background-color: azure;
+}
+
+.login-btn{
     cursor: pointer;
 }
