tailwind css setup done

--- a/styles.css
+++ b/styles.css
@@ -1,105 +1,1 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: aliceblue;
-    border: 1px solid black;
-}
-.border{
-    border: 1px solid black;
-}
-.pad-5{
-    padding: 5px;;
-}
-.pad-10{
-    padding: 10px;;
-}
-.mar-5{
-    margin: 5px;;
-}
-.mar-10{
-    margin: 10px;;
-}
-.border-rd{
-    border-radius: 5px;
-}
-.logo{
-    width: 100px;
-    cursor: pointer;
-    background-color: transparent;
-}
-
-.nav-list{
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items{
-    padding: 0px 20px;
-    cursor: pointer;
-}
-
-.search{
-    padding: 10px;
-}
-
-.search button{
-    cursor: pointer;
-}
-
-.filter{
-    display: flex;
-}
-
-.res-card{
-    padding: 5px;
-    margin: 10px;
-    border-radius: 5px;
-    width: 200px;
-}
-
-.res-card:hover{
-    cursor: pointer;
-    border: 1px solid black;
-    background-color: antiquewhite;
-    animation-timing-function: ease;
-}
-
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-logo{
-    width: 100%;
-    height: 40%;
-}
-
-.top-rated-btn{
-    margin: 10px;
-    cursor: pointer;
-}
-
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card{
-    padding: 5px;
-    margin: 10px;
-    border-radius: 5px;
-    width: 200px;
-    height: 400px;
-    background-color: antiquewhite;
-}
-
-.shimmer-img{
-    width: 100%;
-    height: 40%;
-    background-color: azure;
-}
-
-.login-btn{
-    cursor: pointer;
-}
+@import "tailwindcss";
